--- a/server/package.json
+++ b/server/package.json
@@ -14,19 +14,12 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
-    "axios": "^1.13.4",
-    "bcryptjs": "^3.0.3",
-    "cloudinary": "^2.9.0",
-    "cookie-parser": "^1.4.7",
-    "cors": "^2.8.6",
-    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "form-data": "^4.0.5",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
-    "multer": "^2.0.2",
-    "redis": "^5.10.0",
-    "streamifier": "^0.1.1"
+    "multer": "1.4.5-lts.1",
+    "multer-gridfs-storage": "^5.0.2",
+    "redis": "^5.10.0"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -35,9 +28,8 @@
     "@types/express": "^5.0.6",
     "@types/form-data": "^2.2.1",
     "@types/jsonwebtoken": "^9.0.10",
-    "@types/multer": "^2.0.0",
+    "@types/multer": "^1.4.7",
     "@types/node": "^25.0.10",
-    "@types/streamifier": "^0.1.2",
     "nodemon": "^3.1.11",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
