--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.19",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^5.0.6",
     "@types/form-data": "^2.2.1",
     "@types/jsonwebtoken": "^9.0.10",
