--- a/server/package.json
+++ b/server/package.json
@@ -14,12 +14,15 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "bcryptjs": "^3.0.3",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.6",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.5",
     "multer": "1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2",
-    "redis": "^5.10.0"
+    "multer-gridfs-storage": "^5.0.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
